# c3d

./: .gitignore  BUILD_GTK.md  BUILD_SYSTEM.md  CMakeLists.txt  CMakeLists_tests.txt  CMakeUserPresets.json  DEBUGGING_GUIDE.md  PROJECT_STRUCTURE.md  build-instructions.md  conanfile.txt  conanfile_debug.txt  structure-tree.md  vcpkg.json
build_test_debug/: CTestTestfile.cmake  cmake_install.cmake
build_test_debug/src/: cmake_install.cmake
build_test_debug/tests/: CTestTestfile.cmake  cmake_install.cmake
examples/: CMakeLists.txt  basic_example.cpp
include/c3d/: api.h
libs/: CMakeLists.txt
scripts/: build-both.sh  build-debug.sh  build-release.sh  build.sh  clean.sh  generate-debug-symbols.sh  install_deps.sh  install_ubuntu_deps.sh
src/: CMakeLists.txt  calc.cpp  main.cpp
src/c3d/appWindow/: appWindow.cpp
src/c3d/graphics/: c3dRenderer.cpp  c3dRenderer.h  c3dUtils.cpp  c3dUtils.h  canvasConfig.cpp  canvasConfig.h
src/private/: internal.h
tests/: CMakeLists.txt
tests/unit/: test_main.cpp
